# Shortener

./: pyproject.toml
shortener/: app.py  shortener.py
shortener/static/css/: 404.css  index.css
shortener/templates/: 404.j2  index.j2
